"Fix" misalignment in button

--- a/style/group.css
+++ b/style/group.css
@@ -44,8 +44,9 @@ body {
 }
 
 #group-create #submit-button {
-	text-align: center;
-	margin: 0;
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
 }
 
 #group-create #submit-button #play-button {
